@@ -233,13 +233,7 @@ OmEnquireInternal::get_mset(om_doccount first,
 
     OmMSet retval;
     // Run query and get results into supplied OmMSet object
-    match.match(first, maxitems, retval,
-		&(retval.mbound), &(retval.max_attained),
-		mdecider);
-
-    // Get max weight for an item in the MSet
-    retval.max_possible = match.get_max_weight();
-    retval.firstitem = first;
+    match.match(first, maxitems, retval, mdecider);
 
     Assert(!(query->is_bool()) || retval.max_possible == 0);
 
